add_executable(run_snes_tutorials_1 ex1.c)
target_link_libraries(run_snes_tutorials_1 petsc)
ADDTEST(snes_tutorials_1_np1_1 1 run_snes_tutorials_1 output/ex1_1.out "-ksp_gmres_cgs_refinement_type refine_always -snes_monitor_short ")
ADDTEST(snes_tutorials_1_np1_2 1 run_snes_tutorials_1 FALSE "-ksp_view_solution ascii:ex1_2_sol.tmp:ascii_matlab ")
ADDTEST(snes_tutorials_1_np1_2_v1 1 run_snes_tutorials_1 FALSE "-ksp_view_solution ascii:ex1_2_sol.tmp::append ")
ADDTEST(snes_tutorials_1_np1_2_v2 1 run_snes_tutorials_1 FALSE "-ksp_view_solution ascii:ex1_2_sol.tmp:ascii_matlab:append ")
ADDTEST(snes_tutorials_1_np1_2_v3 1 run_snes_tutorials_1 output/ex1_2.out "-ksp_view_solution ascii:ex1_2_sol.tmp:default:append ")
ADDTEST(snes_tutorials_1_np1_X 1 run_snes_tutorials_1 output/ex1_X.out "-ksp_monitor_short -ksp_type gmres -ksp_gmres_krylov_monitor -snes_monitor_short ")
add_executable(run_snes_tutorials_1f ex1f.F)
target_link_libraries(run_snes_tutorials_1f petsc)
ADDTEST(snes_tutorials_1f_np1_1 1 run_snes_tutorials_1f output/ex1f_1.out "-ksp_gmres_cgs_refinement_type refine_always -snes_monitor_short ")
add_executable(run_snes_tutorials_3 ex3.c)
target_link_libraries(run_snes_tutorials_3 petsc)
ADDTEST(snes_tutorials_3_np1_1 1 run_snes_tutorials_3 output/ex3_1.out "-nox -snes_monitor_cancel -snes_monitor_short -ksp_gmres_cgs_refinement_type refine_always ")
ADDTEST(snes_tutorials_3_np3_2 3 run_snes_tutorials_3 output/ex3_2.out "-nox -pc_type asm -mat_type mpiaij -snes_monitor_cancel -snes_monitor_short -ksp_gmres_cgs_refinement_type refine_always ")
ADDTEST(snes_tutorials_3_np2_3 2 run_snes_tutorials_3 output/ex3_3.out "-nox -snes_monitor_cancel -snes_monitor_short -ksp_gmres_cgs_refinement_type refine_always ")
ADDTEST(snes_tutorials_3_np1_4 1 run_snes_tutorials_3 output/ex3_4.out "-nox -pre_check_iterates -post_check_iterates ")
add_executable(run_snes_tutorials_5 ex5.c)
target_link_libraries(run_snes_tutorials_5 petsc)
ADDTEST(snes_tutorials_5_np1_1 1 run_snes_tutorials_5 output/ex5_1.out "-pc_type mg -ksp_monitor_short  -snes_view -pc_mg_levels 3 -pc_mg_galerkin -da_grid_x 17 -da_grid_y 17 -mg_levels_ksp_monitor_short -mg_levels_ksp_norm_type unpreconditioned -snes_monitor_short -mg_levels_ksp_chebyshev_esteig 0.5,1.1 -mg_levels_pc_type sor -pc_mg_type full ")
ADDTEST(snes_tutorials_5_np1_2 1 run_snes_tutorials_5 output/ex5_2.out "-pc_type mg -ksp_converged_reason -snes_view -pc_mg_galerkin -snes_grid_sequence 3 -mg_levels_ksp_norm_type unpreconditioned -snes_monitor_short -mg_levels_ksp_chebyshev_esteig 0.5,1.1 -mg_levels_pc_type sor -pc_mg_type full ")
ADDTEST(snes_tutorials_5_np2_3 2 run_snes_tutorials_5 output/ex5_3.out "-snes_grid_sequence 2 -snes_mf_operator -snes_converged_reason -snes_view -pc_type mg ")
ADDTEST(snes_tutorials_5_np2_4 2 run_snes_tutorials_5 output/ex5_4.out "-snes_grid_sequence 2 -snes_monitor_short -ksp_converged_reason -snes_converged_reason -snes_view -pc_type mg ")
ADDTEST(snes_tutorials_5_np4_5_nasm 4 run_snes_tutorials_5 output/ex5_5_nasm.out "-snes_monitor_short -snes_converged_reason -da_refine 4 -da_overlap 3         -snes_type nasm -snes_nasm_type restrict -snes_max_it 10 ")
ADDTEST(snes_tutorials_5_np4_5_newton_asm_dmda 4 run_snes_tutorials_5 output/ex5_5_newton_asm_dmda.out "-snes_monitor_short -ksp_monitor_short -snes_converged_reason -da_refine 4 -da_overlap 3         -snes_type newtonls -pc_type asm -pc_asm_dm_subdomains -malloc_dump ")
ADDTEST(snes_tutorials_5_np4_5_newton_gasm_dmda 4 run_snes_tutorials_5 output/ex5_5_newton_gasm_dmda.out "-snes_monitor_short -ksp_monitor_short -snes_converged_reason -da_refine 4 -da_overlap 3         -snes_type newtonls -pc_type gasm -pc_gasm_dm_subdomains -malloc_dump ")
ADDTEST(snes_tutorials_5_np1_5_fas 1 run_snes_tutorials_5 output/ex5_5_fas.out "-fas_coarse_snes_max_it 1 -fas_coarse_pc_type lu -fas_coarse_ksp_type preonly -snes_monitor_short -snes_type fas -fas_coarse_ksp_type richardson -da_refine 6 ")
ADDTEST(snes_tutorials_5_np1_5_fas_additive 1 run_snes_tutorials_5 output/ex5_5_fas_additive.out "-fas_coarse_snes_max_it 1 -fas_coarse_pc_type lu -fas_coarse_ksp_type preonly  -snes_monitor_short -snes_type fas -fas_coarse_ksp_type richardson -da_refine 6 -snes_fas_type additive -snes_max_it 50 ")
ADDTEST(snes_tutorials_5_np1_5_ngmres_fas 1 run_snes_tutorials_5 output/ex5_5_ngmres_fas.out "-snes_rtol 1.e-4 -snes_type ngmres -npc_fas_coarse_snes_max_it 1 -npc_fas_coarse_snes_type newtonls -npc_fas_coarse_pc_type lu -npc_fas_coarse_ksp_type preonly -snes_ngmres_m 10 -snes_monitor_short -npc_snes_max_it 1 -npc_snes_type fas -npc_fas_coarse_ksp_type richardson -da_refine 6 ")
ADDTEST(snes_tutorials_5_np4_6 4 run_snes_tutorials_5 output/ex5_6.out "-snes_converged_reason -ksp_converged_reason -da_grid_x 129 -da_grid_y 129  -pc_type mg -pc_mg_levels 8 -mg_levels_ksp_type chebyshev -mg_levels_ksp_chebyshev_esteig 0,0.5,0,1.1 -mg_levels_ksp_max_it 2 ")
add_executable(run_snes_tutorials_7 ex7.c)
target_link_libraries(run_snes_tutorials_7 petsc)
ADDTEST(snes_tutorials_7_np1_1 1 run_snes_tutorials_7 output/ex7_1.out "-snes_monitor_short -ksp_gmres_cgs_refinement_type refine_always ")
add_executable(run_snes_tutorials_14 ex14.c)
target_link_libraries(run_snes_tutorials_14 petsc)
ADDTEST(snes_tutorials_14_np4_1 4 run_snes_tutorials_14 output/ex14_1.out "-snes_monitor_short -ksp_gmres_cgs_refinement_type refine_always ")
ADDTEST(snes_tutorials_14_np4_2 4 run_snes_tutorials_14 output/ex14_2.out "-snes_monitor_short -ksp_gmres_cgs_refinement_type refine_always  ")
ADDTEST(snes_tutorials_14_np4_3 4 run_snes_tutorials_14 output/ex14_3.out "-fdcoloring -snes_monitor_short -ksp_gmres_cgs_refinement_type refine_always  ")
add_executable(run_snes_tutorials_15 ex15.c)
target_link_libraries(run_snes_tutorials_15 petsc)
ADDTEST(snes_tutorials_15_np2_1 2 run_snes_tutorials_15 output/ex15_1.out "-snes_monitor_short -da_grid_x 20 -da_grid_y 20 -p 1.3 -lambda 1 -jtype NEWTON ")
ADDTEST(snes_tutorials_15_np2_3 2 run_snes_tutorials_15 output/ex15_3.out "-snes_monitor_short -da_grid_x 20 -da_grid_y 20 -p 1.3 -lambda 1 -jtype PICARD -picard -precheck 1 ")
ADDTEST(snes_tutorials_15_np4_lag_jac 4 run_snes_tutorials_15 output/ex15_lag_jac.out "-snes_monitor_short -da_grid_x 20 -da_grid_y 20 -p 6.0 -lambda 0 -jtype NEWTON -snes_type ngmres -npc_snes_type newtonls -npc_snes_lag_jacobian 5 -npc_pc_type asm -npc_ksp_converged_reason -npc_snes_lag_jacobian_persists ")
ADDTEST(snes_tutorials_15_np4_lag_pc 4 run_snes_tutorials_15 output/ex15_lag_pc.out "-snes_monitor_short -da_grid_x 20 -da_grid_y 20 -p 6.0 -lambda 0 -jtype NEWTON -snes_type ngmres -npc_snes_type newtonls -npc_snes_lag_preconditioner 5 -npc_pc_type asm -npc_ksp_converged_reason -npc_snes_lag_preconditioner_persists ")
add_executable(run_snes_tutorials_19 ex19.c)
target_link_libraries(run_snes_tutorials_19 petsc)
ADDTEST(snes_tutorials_19_np2_1 2 run_snes_tutorials_19 output/ex19_1.out "-da_refine 3 -snes_monitor_short -pc_type mg -ksp_type fgmres -pc_mg_type full ")
ADDTEST(snes_tutorials_19_np4_1 4 run_snes_tutorials_19 output/ex19_2.out "-da_refine 3 -snes_converged_reason -pc_type mg -mat_fd_type ds ")
ADDTEST(snes_tutorials_19_np2_1_v1 2 run_snes_tutorials_19 output/ex19_1.out "-da_refine 3 -snes_monitor_short -pc_type mg -ksp_type fgmres -pc_mg_type full -mat_fd_coloring_bcols 1 ")
ADDTEST(snes_tutorials_19_np4_1_v1 4 run_snes_tutorials_19 output/ex19_2.out "-da_refine 3 -snes_converged_reason -pc_type mg -mat_fd_type ds -mat_fd_coloring_bcols 1")
ADDTEST(snes_tutorials_19_np1_1 1 run_snes_tutorials_19 output/ex19_fdcoloring_wp.out "-da_refine 3 -snes_monitor_short -pc_type mg ")
ADDTEST(snes_tutorials_19_np1_1_v1 1 run_snes_tutorials_19 output/ex19_2.out "-da_refine 3 -snes_converged_reason -pc_type mg -mat_fd_type ds ")
ADDTEST(snes_tutorials_19_np1_1_v2 1 run_snes_tutorials_19 output/ex19_fdcoloring_wp.out "-da_refine 3 -snes_monitor_short -pc_type mg -mat_fd_coloring_bcols 1 ")
ADDTEST(snes_tutorials_19_np1_1_v3 1 run_snes_tutorials_19 output/ex19_2.out "-da_refine 3 -snes_converged_reason -pc_type mg -mat_fd_type ds -mat_fd_coloring_bcols 1 ")
ADDTEST(snes_tutorials_19_np1_1_v4 1 run_snes_tutorials_19 output/ex19_fdcoloring_wp.out "-da_refine 3 -snes_monitor_short -pc_type mg -dm_mat_type baij ")
ADDTEST(snes_tutorials_19_np1_1_v5 1 run_snes_tutorials_19 output/ex19_2.out "-da_refine 3 -snes_converged_reason -pc_type mg -mat_fd_type ds -dm_mat_type baij ")
ADDTEST(snes_tutorials_19_np1_6 1 run_snes_tutorials_19 output/ex19_6.out "-snes_monitor_short -ksp_monitor_short -pc_type fieldsplit -snes_view -ksp_type fgmres -da_refine 1  ")
ADDTEST(snes_tutorials_19_np3_7 3 run_snes_tutorials_19 output/ex19_7.out "-snes_monitor_short -ksp_monitor_short -pc_type fieldsplit -snes_view -da_refine 1 -ksp_type fgmres  ")
ADDTEST(snes_tutorials_19_np1_8 1 run_snes_tutorials_19 output/ex19_8.out "-snes_monitor_short -ksp_monitor_short -pc_type fieldsplit -pc_fieldsplit_block_size 2 -pc_fieldsplit_0_fields 0,1 -pc_fieldsplit_1_fields 0,1 -pc_fieldsplit_type multiplicative -snes_view   -fieldsplit_pc_type lu -da_refine 1 -ksp_type fgmres ")
ADDTEST(snes_tutorials_19_np3_9 3 run_snes_tutorials_19 output/ex19_9.out "-snes_monitor_short -ksp_monitor_short -pc_type fieldsplit -pc_fieldsplit_type multiplicative -snes_view -da_refine 1 -ksp_type fgmres  ")
ADDTEST(snes_tutorials_19_np3_10 3 run_snes_tutorials_19 output/ex19_10.out "-snes_monitor_short -ksp_monitor_short -pc_type fieldsplit -pc_fieldsplit_type symmetric_multiplicative -snes_view  -da_refine 1 -ksp_type fgmres ")
ADDTEST(snes_tutorials_19_np4_14 4 run_snes_tutorials_19 output/ex19_14.out "-snes_monitor_short -pc_type mg -dm_mat_type baij -mg_coarse_pc_type bjacobi -da_refine 3 -ksp_type fgmres ")
ADDTEST(snes_tutorials_19_np1_18 1 run_snes_tutorials_19 output/ex19_18.out "-ksp_monitor_snes_lg  -ksp_pc_side right ")
ADDTEST(snes_tutorials_19_np4_14_v1 4 run_snes_tutorials_19 output/ex19_2.out "-snes_converged_reason -pc_type mg -dm_mat_type baij -mg_coarse_pc_type bjacobi -da_refine 3 -ksp_type fgmres -mat_fd_type ds ")
ADDTEST(snes_tutorials_19_np1 1 run_snes_tutorials_19 output/ex19_superlu.out "-da_grid_x 20 -da_grid_y 20 -pc_type lu -pc_factor_mat_solver_package superlu ")
ADDTEST(snes_tutorials_19_np1_v1 1 run_snes_tutorials_19 output/ex19_umfpack.out "-da_refine 2 -pc_type lu -pc_factor_mat_solver_package umfpack -snes_view -snes_monitor_short -ksp_monitor_short ")
ADDTEST(snes_tutorials_19_np1_v2 1 run_snes_tutorials_19 output/ex19_superlu.out "-da_grid_x 20 -da_grid_y 20 -pc_type lu -pc_factor_mat_solver_package klu ")
ADDTEST(snes_tutorials_19_np1_v3 1 run_snes_tutorials_19 output/ex19_superlu.out "-da_grid_x 20 -da_grid_y 20 -pc_type lu -pc_factor_mat_solver_package klu -mat_klu_ordering PETSC ")
ADDTEST(snes_tutorials_19_np1_v4 1 run_snes_tutorials_19 output/ex19_superlu.out "-da_grid_x 20 -da_grid_y 20 -pc_type lu -pc_factor_mat_solver_package klu -mat_klu_use_btf 0 ")
ADDTEST(snes_tutorials_19_np1_v5 1 run_snes_tutorials_19 output/ex19_superlu.out "-da_grid_x 20 -da_grid_y 20 -pc_type lu -pc_factor_mat_solver_package superlu_dist ")
ADDTEST(snes_tutorials_19_np2 2 run_snes_tutorials_19 output/ex19_superlu.out " -da_grid_x 20 -da_grid_y 20 -pc_type lu -pc_factor_mat_solver_package superlu_dist ")
ADDTEST(snes_tutorials_19_np1_6_v1 1 run_snes_tutorials_19 output/ex19_fieldsplit_2.out "-ksp_type fgmres -pc_type fieldsplit -pc_fieldsplit_block_size 4 -pc_fieldsplit_type additive -pc_fieldsplit_0_fields 0,1,2 -pc_fieldsplit_1_fields 3 -snes_monitor_short -ksp_monitor_short  ")
ADDTEST(snes_tutorials_19_np1_6_v2 1 run_snes_tutorials_19 output/ex19_fieldsplit_3.out "-ksp_type fgmres -pc_type fieldsplit -pc_fieldsplit_block_size 4 -pc_fieldsplit_type additive -pc_fieldsplit_0_fields 0,1,2 -pc_fieldsplit_1_fields 3 -fieldsplit_0_pc_type lu -fieldsplit_1_pc_type lu -snes_monitor_short -ksp_monitor_short  ")
ADDTEST(snes_tutorials_19_np1_6_v3 1 run_snes_tutorials_19 output/ex19_fieldsplit_4.out "-ksp_type fgmres -pc_type fieldsplit -pc_fieldsplit_block_size 4 -pc_fieldsplit_type SCHUR -pc_fieldsplit_0_fields 0,1,2 -pc_fieldsplit_1_fields 3 -fieldsplit_0_pc_type lu -fieldsplit_1_pc_type lu -snes_monitor_short -ksp_monitor_short  ")
ADDTEST(snes_tutorials_19_np2_6 2 run_snes_tutorials_19 output/ex19_fieldsplit_5.out "-pc_type fieldsplit -pc_fieldsplit_block_size 4 -pc_fieldsplit_type SCHUR -pc_fieldsplit_0_fields 0,1,2 -pc_fieldsplit_1_fields 3 -fieldsplit_0_pc_type lu -fieldsplit_1_pc_type lu -snes_monitor_short -ksp_monitor_short  -fieldsplit_0_pc_factor_mat_solver_package mumps -fieldsplit_1_pc_factor_mat_solver_package mumps ")
ADDTEST(snes_tutorials_19_np1_6_v4 1 run_snes_tutorials_19 output/ex19_composite_fieldsplit_bjacobi.out "-ksp_type fgmres -pc_type composite -pc_composite_type MULTIPLICATIVE -pc_composite_pcs fieldsplit,bjacobi -sub_0_pc_fieldsplit_block_size 4 -sub_0_pc_fieldsplit_type additive -sub_0_pc_fieldsplit_0_fields 0,1,2 -sub_0_pc_fieldsplit_1_fields 3 -sub_1_pc_bjacobi_blocks 16 -sub_1_sub_pc_type lu -snes_monitor_short -ksp_monitor_short  ")
ADDTEST(snes_tutorials_19_np2_greedy_coloring 2 run_snes_tutorials_19 output/ex19_greedy_coloring.out "-da_refine 3 -snes_monitor_short         -snes_fd_color -snes_fd_color_use_mat -mat_coloring_type greedy -mat_coloring_weight_type lf -mat_coloring_view")
ADDTEST(snes_tutorials_19_np1_draw 1 run_snes_tutorials_19 output/ex19_draw.out "-pc_type fieldsplit -snes_view draw -fieldsplit_x_velocity_pc_type mg -fieldsplit_x_velocity_pc_mg_galerkin -fieldsplit_x_velocity_pc_mg_levels 2 -da_refine 1 -fieldsplit_x_velocity_mg_coarse_pc_type svd ")
add_executable(run_snes_tutorials_18 ex18.c)
target_link_libraries(run_snes_tutorials_18 petsc)
ADDTEST(snes_tutorials_18_np1_1 1 run_snes_tutorials_18 output/ex18_1.out "-pc_type mg -ksp_type fgmres -da_refine 2 -pc_mg_galerkin -snes_view ")
ADDTEST(snes_tutorials_19_np1_1_v6 1 run_snes_tutorials_19 FALSE "-da_refine 3 -pc_type mg -ksp_type fgmres  ")
ADDTEST(snes_tutorials_19_np2_1_v2 2 run_snes_tutorials_19 FALSE "-da_refine 3 -pc_type mg -ksp_type fgmres  ")
add_executable(run_snes_tutorials_20 ex20.c)
target_link_libraries(run_snes_tutorials_20 petsc)
ADDTEST(snes_tutorials_20_np4_1 4 run_snes_tutorials_20 output/ex20_1.out "-snes_monitor_short -pc_mg_type full -ksp_type fgmres -pc_type mg -snes_view -pc_mg_levels 2 -pc_mg_galerkin  ")
add_executable(run_snes_tutorials_21 ex21.c)
target_link_libraries(run_snes_tutorials_21 petsc)
ADDTEST(snes_tutorials_21_np4_1 4 run_snes_tutorials_21 output/ex21_1.out "-snes_linesearch_monitor -snes_mf -snes_monitor_short -nox -ksp_monitor_short -snes_converged_reason ")
add_executable(run_snes_tutorials_22 ex22.c)
target_link_libraries(run_snes_tutorials_22 petsc)
ADDTEST(snes_tutorials_22_np2_1 2 run_snes_tutorials_22 output/ex22_1.out "-da_grid_x 10 -snes_converged_reason -ksp_converged_reason -snes_view ")
add_executable(run_snes_tutorials_25 ex25.c)
target_link_libraries(run_snes_tutorials_25 petsc)
ADDTEST(snes_tutorials_25_np1_1 1 run_snes_tutorials_25 output/ex25_1.out "-pc_type mg -da_refine 1  -ksp_type fgmres  ")
ADDTEST(snes_tutorials_25_np2_2 2 run_snes_tutorials_25 output/ex25_2.out "-pc_type mg -da_refine 1  -ksp_type fgmres ")
add_executable(run_snes_tutorials_28 ex28.c)
target_link_libraries(run_snes_tutorials_28 petsc)
ADDTEST(snes_tutorials_28_np3_0 3 run_snes_tutorials_28 output/ex28_0.out "-da_grid_x 20 -snes_converged_reason -snes_monitor_short -problem_type 0 ")
ADDTEST(snes_tutorials_28_np3_1 3 run_snes_tutorials_28 output/ex28_1.out "-da_grid_x 20 -snes_converged_reason -snes_monitor_short -problem_type 1 ")
ADDTEST(snes_tutorials_28_np3_2 3 run_snes_tutorials_28 output/ex28_2.out "-da_grid_x 20 -snes_converged_reason -snes_monitor_short -problem_type 2 ")
foreach(mtype aij baij sbaij)
ADDTEST(snes_tutorials_28_np3_3_mtype-${mtype} 3 run_snes_tutorials_28 output/ex28_3.out "-da_grid_x 20 -snes_converged_reason -snes_monitor_short -ksp_monitor_short -problem_type 2 -snes_mf_operator     -pack_dm_mat_type ${mtype} -pc_type fieldsplit -pc_fieldsplit_dm_splits -pc_fieldsplit_type additive -fieldsplit_u_ksp_type gmres -fieldsplit_k_pc_type jacobi ")
endforeach()
add_executable(run_snes_tutorials_35 ex35.c)
target_link_libraries(run_snes_tutorials_35 petsc)
ADDTEST(snes_tutorials_35_np1_1 1 run_snes_tutorials_35 output/ex35_1.out " -snes_monitor_short -snes_type nrichardson   ")
ADDTEST(snes_tutorials_35_np1_2 1 run_snes_tutorials_35 output/ex35_2.out "  -snes_monitor_short -ksp_monitor_short -ksp_type richardson -pc_type none -ksp_richardson_self_scale    ")
ADDTEST(snes_tutorials_35_np1_3 1 run_snes_tutorials_35 output/ex35_3.out " -snes_monitor_short  -snes_type ngmres    ")
ADDTEST(snes_tutorials_35_np1_4 1 run_snes_tutorials_35 output/ex35_4.out " -snes_monitor_short  -ksp_type gmres -ksp_monitor_short -pc_type none    ")
ADDTEST(snes_tutorials_35_np1_5 1 run_snes_tutorials_35 output/ex35_5.out "  -snes_monitor_short  -snes_type ncg     ")
ADDTEST(snes_tutorials_35_np1_6 1 run_snes_tutorials_35 output/ex35_6.out "  -snes_monitor_short  -ksp_type cg -ksp_monitor_short  -pc_type none     ")
ADDTEST(snes_tutorials_35_np1_7 1 run_snes_tutorials_35 output/ex35_7.out "-da_refine 2  -snes_monitor_short  -pc_type mg -mg_levels_ksp_type richardson -mg_levels_pc_type none -mg_levels_ksp_monitor_short             -mg_levels_ksp_richardson_self_scale -ksp_type richardson -ksp_monitor_short       ")
ADDTEST(snes_tutorials_35_np1_8 1 run_snes_tutorials_35 output/ex35_8.out " -da_refine 2 -snes_monitor_short  -snes_type fas -fas_levels_snes_monitor_short -fas_coarse_snes_type newtonls -fas_coarse_pc_type lu -fas_coarse_ksp_type preonly -snes_type fas   ")
add_executable(run_snes_tutorials_42 ex42.c)
target_link_libraries(run_snes_tutorials_42 petsc)
ADDTEST(snes_tutorials_42_np1_1 1 run_snes_tutorials_42 output/ex42_1.out "-snes_monitor_short -snes_max_it 1000   ")
add_executable(run_snes_tutorials_46 ex46.c)
target_link_libraries(run_snes_tutorials_46 petsc)
ADDTEST(snes_tutorials_46_np1 1 run_snes_tutorials_46 output/ex46_1.out "-snes_view -snes_monitor_short -da_refine 1 -pc_type mg -ksp_type fgmres -pc_mg_type full -mg_levels_ksp_chebyshev_esteig 0.5,1.1  ")
ADDTEST(snes_tutorials_46_np1_v1 1 run_snes_tutorials_46 output/ex46_ew_1.out "-snes_monitor_short -ksp_converged_reason -da_grid_x 20 -da_grid_y 20 -snes_ksp_ew -snes_ksp_ew_version 1   ")
ADDTEST(snes_tutorials_46_np1_v2 1 run_snes_tutorials_46 output/ex46_ew_2.out "-snes_monitor_short -ksp_converged_reason -da_grid_x 20 -da_grid_y 20 -snes_ksp_ew -snes_ksp_ew_version 2   ")
ADDTEST(snes_tutorials_46_np1_v3 1 run_snes_tutorials_46 output/ex46_ew_3.out "-snes_monitor_short -ksp_converged_reason -da_grid_x 20 -da_grid_y 20 -snes_ksp_ew -snes_ksp_ew_version 3   ")
add_executable(run_snes_tutorials_48 ex48.c)
target_link_libraries(run_snes_tutorials_48 petsc)
ADDTEST(snes_tutorials_48_np1 1 run_snes_tutorials_48 output/ex48_1.out "-M 6 -P 4 -da_refine 1 -snes_monitor_short -snes_converged_reason -ksp_monitor_short -ksp_converged_reason -thi_mat_type sbaij -ksp_type fgmres -pc_type mg -pc_mg_type full -mg_levels_ksp_type gmres -mg_levels_ksp_max_it 1 -mg_levels_pc_type icc ")
ADDTEST(snes_tutorials_48_np2 2 run_snes_tutorials_48 output/ex48_2.out "-M 6 -P 4 -thi_hom z -snes_monitor_short -snes_converged_reason -ksp_monitor_short -ksp_converged_reason -thi_mat_type sbaij -ksp_type fgmres -pc_type mg -pc_mg_type full -mg_levels_ksp_type gmres -mg_levels_ksp_max_it 1 -mg_levels_pc_type asm -mg_levels_pc_asm_blocks 6 -mg_levels_0_pc_type redundant -snes_grid_sequence 1 -mat_partitioning_type current ")
ADDTEST(snes_tutorials_48_np3 3 run_snes_tutorials_48 output/ex48_3.out "-M 7 -P 4 -thi_hom z -da_refine 1 -snes_monitor_short -snes_converged_reason -ksp_monitor_short -ksp_converged_reason -thi_mat_type baij -ksp_type fgmres -pc_type mg -pc_mg_type full -mg_levels_pc_type asm -mg_levels_pc_asm_blocks 9 -mg_levels_ksp_type gmres -mg_levels_ksp_max_it 1 -mat_partitioning_type current ")
ADDTEST(snes_tutorials_48_np6 6 run_snes_tutorials_48 output/ex48_4.out "-M 4 -P 2 -da_refine_hierarchy_x 1,1,3 -da_refine_hierarchy_y 2,2,1 -da_refine_hierarchy_z 2,2,1 -snes_grid_sequence 3 -ksp_converged_reason -ksp_type fgmres -ksp_rtol 1e-2 -pc_type mg -mg_levels_ksp_type gmres -mg_levels_ksp_max_it 1 -mg_levels_pc_type bjacobi -mg_levels_1_sub_pc_type cholesky -pc_mg_type multiplicative -snes_converged_reason -snes_stol 1e-12 -thi_L 80e3 -thi_alpha 0.05 -thi_friction_m 1 -thi_hom x -snes_view -mg_levels_0_pc_type redundant -mg_levels_0_ksp_type preonly ")
foreach(mtype aij baij sbaij)
ADDTEST(snes_tutorials_48_np6_5_mtype-${mtype} 6 run_snes_tutorials_48 output/ex48_5.out "-M 12 -P 5 -snes_monitor_short -ksp_converged_reason -pc_type asm -pc_asm_type restrict -dm_mat_type ${mtype} ")
endforeach()
add_executable(run_snes_tutorials_58 ex58.c)
target_link_libraries(run_snes_tutorials_58 petsc)
ADDTEST(snes_tutorials_58_np1 1 run_snes_tutorials_58 output/ex58_1.out "-snes_type vinewtonrsls -pc_type mg -ksp_monitor_short -pc_mg_galerkin -da_refine 5   -snes_vi_monitor -pc_mg_type full  -snes_max_it 100 -snes_converged_reason ")
ADDTEST(snes_tutorials_58_np1_v1 1 run_snes_tutorials_58 output/ex58_2.out "-snes_type vinewtonssls -pc_type mg -ksp_monitor_short -pc_mg_galerkin -da_refine 5   -snes_vi_monitor -pc_mg_type full  -snes_max_it 100 -snes_converged_reason ")
