add_executable(run_sys_tests_13 ex13.c)
target_link_libraries(run_sys_tests_13 petsc)
ADDTEST(sys_tests_13_np1_1 1 run_sys_tests_13 output/ex13_1.out "")
add_executable(run_sys_tests_19 ex19.c)
target_link_libraries(run_sys_tests_19 petsc)
ADDTEST(sys_tests_19_np1_1 1 run_sys_tests_19 output/ex19_1.out "")
add_executable(run_sys_tests_20 ex20.c)
target_link_libraries(run_sys_tests_20 petsc)
ADDTEST(sys_tests_20_np1_1 1 run_sys_tests_20 output/ex20_1.out "")
ADDTEST(sys_tests_20_np1_2 1 run_sys_tests_20 output/ex20_2.out "-cl -prefix_push cl_ -zero 10 -prefix_push a_ -one 11 -prefix_push bb_ -two 12 -prefix_pop -three 13 -prefix_push cc_ -prefix_push ddd_ -four 14 -prefix_pop -prefix_pop -prefix_pop -five 15 -prefix_pop ")
ADDTEST(sys_tests_20_np1_3 1 run_sys_tests_20 output/ex20_3.out "-str ")
add_executable(run_sys_tests_22 ex22.c)
target_link_libraries(run_sys_tests_22 petsc)
ADDTEST(sys_tests_22_np1 1 run_sys_tests_22 output/ex22.out "")
add_executable(run_sys_tests_25 ex25.c)
target_link_libraries(run_sys_tests_25 petsc)
ADDTEST(sys_tests_25_np1 1 run_sys_tests_25 output/ex25.out "")
