add_executable(run_sys_tutorials_1 ex1.c)
target_link_libraries(run_sys_tutorials_1 petsc)
ADDTEST(sys_tutorials_1_np1_1 1 run_sys_tutorials_1 output/ex1_1.out "")
add_executable(run_sys_tutorials_2 ex2.c)
target_link_libraries(run_sys_tutorials_2 petsc)
ADDTEST(sys_tutorials_2_np1_1 1 run_sys_tutorials_2 output/ex2_1.out "")
add_executable(run_sys_tutorials_4 ex4.c)
target_link_libraries(run_sys_tutorials_4 petsc)
ADDTEST(sys_tutorials_4_np5_1 5 run_sys_tutorials_4 output/ex4_1.out " ")
add_executable(run_sys_tutorials_4f ex4f.F)
target_link_libraries(run_sys_tutorials_4f petsc)
ADDTEST(sys_tutorials_4f_np5_1 5 run_sys_tutorials_4f output/ex4f_1.out " ")
