add_executable(run_ts_tests_4 ex4.c)
target_link_libraries(run_ts_tests_4 petsc)
ADDTEST(ts_tests_4_np1 1 run_ts_tests_4 output/ex4.out "-ts_fd -ts_type beuler")
ADDTEST(ts_tests_4_np2 2 run_ts_tests_4 output/ex4.out "-ts_fd -ts_type beuler ")
ADDTEST(ts_tests_4_np1_v1 1 run_ts_tests_4 output/ex4_3.out "-ts_fd -ts_type cn ")
ADDTEST(ts_tests_4_np2_v1 2 run_ts_tests_4 output/ex4_3.out "-ts_fd -ts_type cn ")
ADDTEST(ts_tests_4_np1_v2 1 run_ts_tests_4 output/ex4.out "-ts_type beuler -ts_fd -fd_color -mat_coloring_type sl ")
ADDTEST(ts_tests_4_np2_v2 2 run_ts_tests_4 output/ex4.out "-ts_type beuler -ts_fd -fd_color -mat_coloring_type sl ")
ADDTEST(ts_tests_4_np1_v3 1 run_ts_tests_4 output/ex4_7.out "-ts_fd -ts_type beuler -test_PostStep ")
add_executable(run_ts_tests_25 ex25.c)
target_link_libraries(run_ts_tests_25 petsc)
ADDTEST(ts_tests_25_np1_1 1 run_ts_tests_25 output/ex25_1.out "-ts_exact_final_time INTERPOLATE ")
ADDTEST(ts_tests_25_np2_2 2 run_ts_tests_25 output/ex25_2.out "-ts_exact_final_time INTERPOLATE ")
