add_executable(run_ts_tutorials_1 ex1.c)
target_link_libraries(run_ts_tutorials_1 petsc)
ADDTEST(ts_tutorials_1_np1_1 1 run_ts_tutorials_1 output/ex1_1.out "-ksp_gmres_cgs_refinement_type refine_always -snes_type newtonls -ts_monitor_pseudo ")
ADDTEST(ts_tutorials_1_np1_2 1 run_ts_tutorials_1 output/ex1_2.out "-ts_monitor_pseudo ")
add_executable(run_ts_tutorials_1f ex1f.F)
target_link_libraries(run_ts_tutorials_1f petsc)
ADDTEST(ts_tutorials_1f_np1_1 1 run_ts_tutorials_1f output/ex1f_1.out "-ksp_gmres_cgs_refinement_type refine_always -snes_type newtonls -ts_monitor_pseudo ")
add_executable(run_ts_tutorials_2 ex2.c)
target_link_libraries(run_ts_tutorials_2 petsc)
ADDTEST(ts_tutorials_2_np2_1 2 run_ts_tutorials_2 output/ex2_1.out "-nox -ts_dt 10 -mymonitor ")
add_executable(run_ts_tutorials_2f ex2f.F)
target_link_libraries(run_ts_tutorials_2f petsc)
ADDTEST(ts_tutorials_2f_np1_1 1 run_ts_tutorials_2f output/ex2f_1.out "-ts_max_steps 100 ")
add_executable(run_ts_tutorials_3 ex3.c)
target_link_libraries(run_ts_tutorials_3 petsc)
ADDTEST(ts_tutorials_3_np1_1 1 run_ts_tutorials_3 output/ex3_1.out "-nox -ts_type ssp -ts_dt 0.0005 ")
ADDTEST(ts_tutorials_3_np1_2 1 run_ts_tutorials_3 output/ex3_1.out "-nox -ts_type ssp -ts_dt 0.0005 -time_dependent_rhs 1 ")
add_executable(run_ts_tutorials_4 ex4.c)
target_link_libraries(run_ts_tutorials_4 petsc)
ADDTEST(ts_tutorials_4_np1_1 1 run_ts_tutorials_4 output/ex4_1.out "-ts_view -nox ")
ADDTEST(ts_tutorials_4_np3_2 3 run_ts_tutorials_4 output/ex4_2.out "-ts_view -nox ")
ADDTEST(ts_tutorials_4_np1_3 1 run_ts_tutorials_4 output/ex4_3.out "-ts_view -nox -nonlinear ")
ADDTEST(ts_tutorials_4_np3_4 3 run_ts_tutorials_4 output/ex4_4.out "-ts_view -nox -nonlinear ")
add_executable(run_ts_tutorials_6 ex6.c)
target_link_libraries(run_ts_tutorials_6 petsc)
ADDTEST(ts_tutorials_6_np1_1 1 run_ts_tutorials_6 output/ex6_1.out "-nox -ts_max_steps 4   ")
add_executable(run_ts_tutorials_7 ex7.c)
target_link_libraries(run_ts_tutorials_7 petsc)
ADDTEST(ts_tutorials_7_np1_1 1 run_ts_tutorials_7 output/ex7_1.out "-ts_max_steps 5   ")
ADDTEST(ts_tutorials_7_np1_2 1 run_ts_tutorials_7 output/ex7_2.out "-ts_max_steps 5  -snes_mf_operator ")
ADDTEST(ts_tutorials_7_np1_3 1 run_ts_tutorials_7 output/ex7_3.out "-ts_max_steps 5  -snes_mf ")
add_executable(run_ts_tutorials_8 ex8.c)
target_link_libraries(run_ts_tutorials_8 petsc)
ADDTEST(ts_tutorials_8_np1_1 1 run_ts_tutorials_8 output/ex8_1.out "-monitor_error -ts_atol 1e-2 -ts_rtol 1e-2 -ts_exact_final_time interpolate -ts_type arkimex ")
ADDTEST(ts_tutorials_8_np1_2 1 run_ts_tutorials_8 output/ex8_2.out "-ts_atol 1e-2 -ts_rtol 1e-2 -ts_final_time 15 -ts_type arkimex -ts_arkimex_type 2e -problem_type orego -ts_arkimex_initial_guess_extrapolate 0 ")
ADDTEST(ts_tutorials_8_np1_3 1 run_ts_tutorials_8 output/ex8_3.out "-ts_atol 1e-2 -ts_rtol 1e-2 -ts_final_time 15 -ts_type arkimex -ts_arkimex_type 2e -problem_type orego -ts_arkimex_initial_guess_extrapolate 1 ")
add_executable(run_ts_tutorials_10 ex10.c)
target_link_libraries(run_ts_tutorials_10 petsc)
ADDTEST(ts_tutorials_10_np1_1 1 run_ts_tutorials_10 output/ex10_1.out "-da_grid_x 20 -rd_initial 1 -rd_discretization fd    -rd_jacobian fd_coloring -rd_endpoint -ts_final_time 1 -ts_dt 2e-1 -ts_theta_extrapolate 0    -ts_monitor -snes_monitor_short -ksp_monitor_short ")
ADDTEST(ts_tutorials_10_np1_2 1 run_ts_tutorials_10 output/ex10_2.out "-da_grid_x 20 -rd_initial 1 -rd_discretization fe -rd_quadrature lobatto2    -rd_jacobian fd_coloring -rd_endpoint -ts_final_time 1 -ts_dt 2e-1 -ts_theta_extrapolate 0    -ts_monitor -snes_monitor_short -ksp_monitor_short ")
ADDTEST(ts_tutorials_10_np2_3 2 run_ts_tutorials_10 output/ex10_3.out "-da_grid_x 20 -rd_initial 1 -rd_discretization fd    -rd_jacobian analytic -rd_endpoint -ts_final_time 3 -ts_dt 1e-1 -ts_theta_extrapolate 0    -ts_monitor -snes_monitor_short -ksp_monitor_short ")
add_executable(run_ts_tutorials_13 ex13.c)
target_link_libraries(run_ts_tutorials_13 petsc)
ADDTEST(ts_tutorials_13_np1 1 run_ts_tutorials_13 output/ex13_1.out "-ts_max_steps 5 -ts_monitor ")
ADDTEST(ts_tutorials_13_np3 3 run_ts_tutorials_13 output/ex13_1.out "-ts_max_steps 5 -ts_monitor ")
ADDTEST(ts_tutorials_13_np3_v1 3 run_ts_tutorials_13 output/ex13_1.out "-ts_max_steps 5 -snes_fd_color -ts_monitor ")
add_executable(run_ts_tutorials_15 ex15.c)
target_link_libraries(run_ts_tutorials_15 petsc)
ADDTEST(ts_tutorials_15_np1 1 run_ts_tutorials_15 output/ex15_1.out "-da_grid_x 20 -da_grid_y 20 -boundary 0 -ts_max_steps 10 -ts_monitor ")
ADDTEST(ts_tutorials_15_np1_v1 1 run_ts_tutorials_15 output/ex15_1.out "-da_grid_x 20 -da_grid_y 20 -boundary 0 -ts_max_steps 10 -Jtype 2 -ts_monitor ")
ADDTEST(ts_tutorials_15_np1_v2 1 run_ts_tutorials_15 output/ex15_1.out "-da_grid_x 20 -da_grid_y 20 -boundary 1 -ts_max_steps 10 -ts_monitor ")
ADDTEST(ts_tutorials_15_np2 2 run_ts_tutorials_15 output/ex15_1.out "-da_grid_x 20 -da_grid_y 20 -boundary 1 -ts_max_steps 10 -ts_monitor ")
ADDTEST(ts_tutorials_15_np1_v3 1 run_ts_tutorials_15 output/ex15_1.out "-da_grid_x 20 -da_grid_y 20 -boundary 0 -ts_max_steps 10 -Jtype 1 -ts_monitor ")
add_executable(run_ts_tutorials_16 ex16.c)
target_link_libraries(run_ts_tutorials_16 petsc)
ADDTEST(ts_tutorials_16_np1_1 1 run_ts_tutorials_16 output/ex16_1.out "-ts_type arkimex -ts_arkimex_type myark2 -ts_adapt_type none ")
add_executable(run_ts_tutorials_17 ex17.c)
target_link_libraries(run_ts_tutorials_17 petsc)
ADDTEST(ts_tutorials_17_np1_1 1 run_ts_tutorials_17 output/ex17_1.out "-da_grid_x 40 -ts_max_steps 2 -snes_monitor_short -ksp_monitor_short -ts_monitor ")
ADDTEST(ts_tutorials_17_np1_2 1 run_ts_tutorials_17 output/ex17_2.out "-da_grid_x 100 -ts_type theta -ts_theta_theta 0.5 ")
add_executable(run_ts_tutorials_22 ex22.c)
target_link_libraries(run_ts_tutorials_22 petsc)
ADDTEST(ts_tutorials_22_np1_1 1 run_ts_tutorials_22 output/ex22_1.out "-nox -da_grid_x 200 -ts_monitor_draw_solution -ts_arkimex_type 4 -ts_adapt_type none ")
ADDTEST(ts_tutorials_22_np2_2 2 run_ts_tutorials_22 output/ex22_2.out "-nox -da_grid_x 200 -ts_monitor_draw_solution -ts_type rosw -ts_dt 1e-3 -ts_adapt_type none ")
ADDTEST(ts_tutorials_22_np2_3 2 run_ts_tutorials_22 output/ex22_3.out "-nox -da_grid_x 200 -ts_monitor_draw_solution -ts_type rosw -ts_rosw_type ra34pw2 -ts_dt 5e-3 -ts_adapt_type none ")
add_executable(run_ts_tutorials_25 ex25.c)
target_link_libraries(run_ts_tutorials_25 petsc)
ADDTEST(ts_tutorials_25_np1_1 1 run_ts_tutorials_25 output/ex25_1.out "-nox -da_grid_x 20 -ts_monitor_draw_solution -ts_type rosw -ts_rosw_type 2p -ts_dt 5e-2 -ts_adapt_type none ")
add_executable(run_ts_tutorials_40 ex40.c)
target_link_libraries(run_ts_tutorials_40 petsc)
ADDTEST(ts_tutorials_40_np1 1 run_ts_tutorials_40 output/ex40.out "")
add_executable(run_ts_tutorials_41 ex41.c)
target_link_libraries(run_ts_tutorials_41 petsc)
ADDTEST(ts_tutorials_41_np2 2 run_ts_tutorials_41 output/ex41.out "")
